♻️ assets 폴더 src 하위로 이동

--- a/src/pages/ItemList/index.html
+++ b/src/pages/ItemList/index.html
@@ -23,12 +23,12 @@
       <div class="product-controls">
         <button id="hideFilters" class="control-button">
           <p>필터 숨기기</p>
-          <img src="/assets/filter.svg" />
+          <img src="../../assets/filter.svg" />
         </button>
         <div class="sort-dropdown">
           <button id="sortButton" class="control-button">
             <p>정렬 기준</p>
-            <img src="/assets/arrowBottom.svg" />
+            <img src="../../assets/arrowBottom.svg" />
           </button>
           <ul id="sortOptions" class="sort-options">
             <li>추천순</li>
@@ -92,7 +92,7 @@
         <p>741개의 결과</p>
         <div class="filter">
           <span>필터</span>
-          <img src="/assets/filter.svg" />
+          <img src="../../assets/filter.svg" />
         </div>
       </div>
 
@@ -100,7 +100,7 @@
       <main class="products">
         <div class="product-grid">
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item1.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item1.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
@@ -113,7 +113,7 @@
           </a>
 
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item2.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item2.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
@@ -126,7 +126,7 @@
           </a>
 
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item3.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item3.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
@@ -138,7 +138,7 @@
             </div>
           </a>
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item4.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item4.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
@@ -150,7 +150,7 @@
             </div>
           </a>
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item5.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item5.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
@@ -162,7 +162,7 @@
             </div>
           </a>
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item6.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item6.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
@@ -174,7 +174,7 @@
             </div>
           </a>
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item7.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item7.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
@@ -186,7 +186,7 @@
             </div>
           </a>
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item8.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item8.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
@@ -198,7 +198,7 @@
             </div>
           </a>
           <a href="../itemDetail/index.html" class="product-card">
-            <img src="/assets/item9.png" alt="언스트럭처 데님 캡" />
+            <img src="../../assets/item9.png" alt="언스트럭처 데님 캡" />
             <div class="product-contents">
               <div class="product-title">신제품</div>
               <div class="product-subtitle">나이키 클럽</div>
