--- a/src/pages/customerService/index.html
+++ b/src/pages/customerService/index.html
@@ -23,7 +23,7 @@
     <div class="search-container">
       <input type="text" class="search-input" placeholder="무엇을 도와드릴까요?">
       <div class="search-icon">
-        <img src="/assets/search_gray.svg" alt="검색" />
+        <img src="../../assets/search_gray.svg" alt="검색" />
       </div>
     </div>
 
@@ -97,7 +97,7 @@
       <div class="contact-grid">
         <div class="contact-item">
           <div>
-            <img src="/assets/chat.svg" />
+            <img src="../../assets/chat.svg" />
           </div>
           <div class="contact-text">
             <h3>채팅 문의</h3>
@@ -107,7 +107,7 @@
         </div>
         <div class="contact-item">
           <div>
-            <img src="/assets/device.svg" alt="전화 문의" />
+            <img src="../../assets/device.svg" alt="전화 문의" />
           </div>
           <div class="contact-text">
             <h3>전화 문의</h3>
@@ -117,7 +117,7 @@
         </div>
         <div class="contact-item">
           <div>
-            <img src="/assets/device.svg" alt="AS 문의" />
+            <img src="../../assets/device.svg" alt="AS 문의" />
           </div>
           <div class="contact-text">
             <h3>AS 문의</h3>
@@ -127,7 +127,7 @@
         </div>
         <div class="contact-item">
           <div>
-            <img src="/assets/pin.svg" alt="매장 찾기" />
+            <img src="../../assets/pin.svg" alt="매장 찾기" />
           </div>
           <div class="contact-text">
             <h3>매장 찾기</h3>
