--- a/src/pages/findStore/index.html
+++ b/src/pages/findStore/index.html
@@ -36,7 +36,7 @@
       <!-- 검색바 -->
       <div class="search-container">
         <div class="search-input">
-          <img src="/assets/search.svg" />
+          <img src="../../assets/search.svg" />
           <input type="text" placeholder="위치 검색" />
         </div>
         <p>근처 매장: 15 개</p>
@@ -80,7 +80,7 @@
 
     <!-- 맵뷰 -->
     <div class="map-container active" id="map">
-      <div><img src="/assets/map.svg" /></div>
+      <div><img src="../../assets/map.svg" /></div>
     </div>
   </div>
   <!-- 컨텐츠 끝-->
