--- a/src/pages/itemDetail/index.html
+++ b/src/pages/itemDetail/index.html
@@ -31,23 +31,23 @@
       <!-- 상품이미지 리스트 -->
       <div class="thumbnail-list-wrapper">
         <div class="thumbnail-list">
-          <img src="/assets/productImage.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage2.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage3.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage4.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage5.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage6.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage7.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage8.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage9.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage10.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage11.png" alt="썸네일 1" class="thumbnail" />
-          <img src="/assets/productImage12.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage2.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage3.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage4.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage5.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage6.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage7.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage8.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage9.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage10.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage11.png" alt="썸네일 1" class="thumbnail" />
+          <img src="../../assets/productImage12.png" alt="썸네일 1" class="thumbnail" />
         </div>
       </div>
       <!-- 상품이미지 -->
       <div class="main-image-container">
-        <img src="/assets/productImage.png" alt="상품" class="main-image" />
+        <img src="../../assets/productImage.png" alt="상품" class="main-image" />
       </div>
     </div>
 
@@ -62,8 +62,8 @@
       </div>
       <!-- 연관 상품 -->
       <div class="product-related">
-        <img class="related-image" src="/assets/productImage.png" alt="연관 상품" />
-        <img class="related-image" src="/assets/productImage13.png" alt="연관 상품" />
+        <img class="related-image" src="../../assets/productImage.png" alt="연관 상품" />
+        <img class="related-image" src="../../assets/productImage13.png" alt="연관 상품" />
       </div>
 
       <!-- 사이즈 선택  -->
@@ -84,7 +84,7 @@
 
       <!-- 위시리스트 버튼 -->
       <button class="wishlist">
-        위시리스트 <img src="/assets/heart.svg" />
+        위시리스트 <img src="../../assets/heart.svg" />
       </button>
 
       <!-- 상품설명 캡션 -->
@@ -118,7 +118,7 @@
         <!-- 무료 배송 및 반품 -->
         <div class="toggle-title">
           <h3>무료 배송 및 반품</h3>
-          <img src="/assets/arrowBottom.svg" />
+          <img src="../../assets/arrowBottom.svg" />
         </div>
         <div class="toggle-content">
           <p>
@@ -145,7 +145,7 @@
       <div class="toggle-section">
         <div class="toggle-title">
           <h3>제작 과정</h3>
-          <img src="/assets/arrowBottom.svg" />
+          <img src="../../assets/arrowBottom.svg" />
         </div>
         <div class="toggle-content">
           <!-- 이곳에 토글 클릭시 나타날 컨텐츠가 들어갑니다. -->
@@ -157,12 +157,12 @@
           <h3>리뷰(0)</h3>
           <div style="display: flex; align-items: center; gap: 14px">
             <div>
-              <img src="/assets/star.svg" />
-              <img src="/assets/star.svg" />
-              <img src="/assets/star.svg" />
+              <img src="../../assets/star.svg" />
+              <img src="../../assets/star.svg" />
+              <img src="../../assets/star.svg" />
             </div>
 
-            <img src="/assets/arrowBottom.svg" />
+            <img src="../../assets/arrowBottom.svg" />
           </div>
         </div>
         <div class="toggle-content"></div>
@@ -171,7 +171,7 @@
       <div class="toggle-section">
         <div class="toggle-title">
           <h3>추가 정보</h3>
-          <img src="/assets/arrowBottom.svg" />
+          <img src="../../assets/arrowBottom.svg" />
         </div>
         <div class="toggle-content">
           <p></p>
@@ -186,28 +186,28 @@
       <h2 class="rec-title">추천 제품</h2>
       <div class="rec-slide-buttons">
         <button class="rec-slide-button">
-          <img src="/assets/left.svg" />
+          <img src="../../assets/left.svg" />
         </button>
         <button class="rec-slide-button">
-          <img src="/assets/right.svg" />
+          <img src="../../assets/right.svg" />
         </button>
       </div>
     </div>
     <div class="rec-item-gallery">
       <div class="rec-item-card">
-        <img src="/assets/item7.png" alt="나이키 운동화 1" class="rec-item-image" />
+        <img src="../../assets/item7.png" alt="나이키 운동화 1" class="rec-item-image" />
         <h3 class="rec-item-title">나이키 운동화 1</h3>
         <p class="rec-item-category">남성 신발</p>
         <p class="rec-item-price">138,000 원</p>
       </div>
       <div class="rec-item-card">
-        <img src="/assets/item2.png" alt="나이키 운동화 1" class="rec-item-image" />
+        <img src="../../assets/item2.png" alt="나이키 운동화 1" class="rec-item-image" />
         <h3 class="rec-item-title">나이키 모자</h3>
         <p class="rec-item-category">남성 신발</p>
         <p class="rec-item-price">35,000 원</p>
       </div>
       <div class="rec-item-card">
-        <img src="/assets/item3.png" alt="나이키 운동화 1" class="rec-item-image" />
+        <img src="../../assets/item3.png" alt="나이키 운동화 1" class="rec-item-image" />
         <h3 class="rec-item-title">나이키 운동화 2</h3>
         <p class="rec-item-category">남성 신발</p>
         <p class="rec-item-price">139,000 원</p>
