--- a/src/pages/myCart/index.html
+++ b/src/pages/myCart/index.html
@@ -20,7 +20,7 @@
 
   <!-- 검색바(모바일) -->
   <div class="search-bar">
-    <img src="/assets/search.svg" />
+    <img src="../../assets/search.svg" />
     <input type="text" placeholder="검색" />
   </div>
 
@@ -35,7 +35,7 @@
         <div class="product">
           <div class="product-header">
             <div class="product-image">
-              <img src="/assets/item5.png" />
+              <img src="../../assets/item5.png" />
             </div>
             <div class="product-details">
               <div class="product-title-price">
@@ -46,8 +46,8 @@
               <div class="product-option">포른 티스트/그린듀와연/새벽/크롬</div>
               <div class="product-quantity">사이즈: 275 • 수량 — 1 +</div>
               <div class="product-actions">
-                <span><img src="/assets/heart.svg" /></span>
-                <span><img src="/assets/trash.svg" /></span>
+                <span><img src="../../assets/heart.svg" /></span>
+                <span><img src="../../assets/trash.svg" /></span>
               </div>
             </div>
           </div>
@@ -65,7 +65,7 @@
           <div class="order-row">
             <div style="display: flex; gap: 7.6px;">
               <span>상품 금액</span>
-              <img src="/assets/question.svg" />
+              <img src="../../assets/question.svg" />
             </div>
             <span>189,000 원</span>
           </div>
@@ -87,7 +87,7 @@
       <h2>위시리스트</h2>
       <div class="wishlist-section">
         <div class="wishlist-card">
-          <img src="/assets/item2.png" />
+          <img src="../../assets/item2.png" />
           <div class="wishlist-card-info">
             <p class="wishlist-product">나이키 줌 보메로</p>
             <p class="wishlist-category">남성 신발 <br /> 사이즈 275</p>
@@ -96,7 +96,7 @@
         </div>
 
         <div class="wishlist-card">
-          <img src="/assets/item6.png" />
+          <img src="../../assets/item6.png" />
           <div class="wishlist-card-info">
             <p class="wishlist-product">나이키 줌 보메로</p>
             <p class="wishlist-category">남성 신발 <br /> 사이즈 275</p>
@@ -113,28 +113,28 @@
         <h2 class="rec-title">추천 제품</h2>
         <div class="rec-slide-buttons">
           <button class="rec-slide-button">
-            <img src="/assets/left.svg" />
+            <img src="../../assets/left.svg" />
           </button>
           <button class="rec-slide-button">
-            <img src="/assets/right.svg" />
+            <img src="../../assets/right.svg" />
           </button>
         </div>
       </div>
       <div class="rec-item-gallery">
         <div class="rec-item-card">
-          <img src="/assets/item2.png" alt="나이키 운동화 1" class="rec-item-image">
+          <img src="../../assets/item2.png" alt="나이키 운동화 1" class="rec-item-image">
           <h3 class="rec-item-title">나이키 운동화 1</h3>
           <p class="rec-item-category">남성 신발</p>
           <p class="rec-item-price">138,000 원</p>
         </div>
         <div class="rec-item-card">
-          <img src="/assets/item8.png" alt="나이키 운동화 1" class="rec-item-image">
+          <img src="../../assets/item8.png" alt="나이키 운동화 1" class="rec-item-image">
           <h3 class="rec-item-title">나이키 모자</h3>
           <p class="rec-item-category">남성 신발</p>
           <p class="rec-item-price">35,000 원</p>
         </div>
         <div class="rec-item-card">
-          <img src="/assets/item9.png" alt="나이키 운동화 1" class="rec-item-image">
+          <img src="../../assets/item9.png" alt="나이키 운동화 1" class="rec-item-image">
           <h3 class="rec-item-title">나이키 운동화 2</h3>
           <p class="rec-item-category">남성 신발</p>
           <p class="rec-item-price">139,000 원</p>
