--- a/src/pages/signIn/index.html
+++ b/src/pages/signIn/index.html
@@ -13,7 +13,7 @@
   <!-- 컨텐츠 시작 -->
   <div class="container">
     <!-- 로고 -->
-    <img src="/assets/logo.svg" alt="Nike Logo" class="nike-logo">
+    <img src="../../assets/logo.svg" alt="Nike Logo" class="nike-logo">
 
     <!-- step 1 -->
     <div class="step active" id="step1">
@@ -31,7 +31,7 @@
       <p class="user-email"></p>
       <div class="input-group">
         <input type="password" id="password" placeholder="비밀번호" required>
-        <img src="/assets/eyeSlash.svg" style="width: 20px; height: 20px; padding: 16px;" alt="비밀번호 입력" />
+        <img src="../../assets/eyeSlash.svg" style="width: 20px; height: 20px; padding: 16px;" alt="비밀번호 입력" />
       </div>
       <p class="help-text"><a>비밀번호 찾기</a></p>
       <div class="btn-container">
