--- a/src/pages/wishList/index.html
+++ b/src/pages/wishList/index.html
@@ -29,7 +29,7 @@
     <div class="wishlist-grid">
       <!-- 상품1 -->
       <div class="wishlist-card">
-        <img src="/assets/wishlist.png" />
+        <img src="../../assets/wishlist.png" />
         <div class="product-info">
           <div class="product-category">
             <h2>나이키 줌 보메로 5</h2>
@@ -46,7 +46,7 @@
       </div>
       <!-- 상품2 -->
       <div class="wishlist-card">
-        <img src="/assets/wishlist.png" />
+        <img src="../../assets/wishlist.png" />
         <div class="product-info">
           <div class="product-category">
             <h2>나이키 줌 보메로 5</h2>
