--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <!-- 메인배너 -->
     <div class="main-banner">
-      <img src="/assets/banner.png" alt="Main Banner" class="banner-image">
+      <img src="../../assets/banner.png" alt="Main Banner" class="banner-image">
       <div class="banner-content">
         <h1 class="banner-title">아무나 오를 수 없는 승자의 자리.</h1>
         <p class="banner-subtitle">모두를 위한 스포츠 정신을 전하는 것</p>
@@ -33,7 +33,7 @@
       <h1 style="margin-bottom: 24px;">Win On Air</h1>
       <div class="card-container">
         <div class="card">
-          <img src="/assets/Figure1.png" alt="의류" class="card-image">
+          <img src="../../assets/Figure1.png" alt="의류" class="card-image">
           <div class="card-content">
             <span></span>
             <h2 class="card-title">의류</h2>
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/assets/Figure2.png" alt="신발" class="card-image">
+          <img src="../../assets/Figure2.png" alt="신발" class="card-image">
           <div class="card-content">
             <span></span>
             <h2 class="card-title">신발</h2>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/assets/Figure3.png" alt="액세서리 & 용품" class="card-image">
+          <img src="../../assets/Figure3.png" alt="액세서리 & 용품" class="card-image">
           <div class="card-content">
             <span></span>
             <h2 class="card-title">액세서리 & 용품</h2>
@@ -61,7 +61,7 @@
 
     <!-- 나이키 잼 -->
     <div class="main-banner">
-      <img src="/assets/nikeJam.png" alt="Main Banner" class="banner-image">
+      <img src="../../assets/nikeJam.png" alt="Main Banner" class="banner-image">
       <div class="banner-content">
         <h2>신제품</h2>
         <h1 class="banner-title">나이키 잼</h1>
@@ -72,7 +72,7 @@
 
     <!-- 자크뮈스 -->
     <div class="main-banner">
-      <img src="/assets/jacquemus.png" alt="Main Banner" class="banner-image">
+      <img src="../../assets/jacquemus.png" alt="Main Banner" class="banner-image">
       <div class="banner-content">
         <h2>새로운 컬렉션</h2>
         <h1 class="banner-title">나이키 X 자크뮈스</h1>
@@ -92,7 +92,7 @@
       </div>
       <div class="card-container">
         <div class="card">
-          <img src="/assets/trending1.png" alt="의류" class="card-image">
+          <img src="../../assets/trending1.png" alt="의류" class="card-image">
           <div class="card-content">
             <span></span>
             <h2 class="card-title">매드 엠비션 팩</h2>
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/assets/trending2.png" alt="신발" class="card-image">
+          <img src="../../assets/trending2.png" alt="신발" class="card-image">
           <div class="card-content">
             <span></span>
             <h2 class="card-title">가장 나다움을 담은 수트</h2>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="/assets/trending3.png" alt="액세서리 & 용품" class="card-image">
+          <img src="../../assets/trending3.png" alt="액세서리 & 용품" class="card-image">
           <div class="card-content">
             <span></span>
             <h2 class="card-title">샌들 & 슬라이드</h2>
@@ -123,12 +123,12 @@
       <h1 style="margin-bottom: 24px;">Featured</h1>
       <div class="featured-grid">
         <div class="featured-item">
-          <img src="/assets/feature1.png" alt="나이키 브라">
+          <img src="../../assets/feature1.png" alt="나이키 브라">
           <a href="#" class="featured-button">워크아웃 에센셜</a>
           <a href="#" class="featured-button">구매하기</a>
         </div>
         <div class="featured-item">
-          <img src="/assets/featrue2.png" alt="나이키 에코프로 9">
+          <img src="../../assets/featrue2.png" alt="나이키 에코프로 9">
           <a href="#" class="featured-button">나이키 메트콘 9</a>
           <a href="#" class="featured-button">구매하기</a>
         </div>
@@ -141,23 +141,23 @@
       <div class="slider-container">
         <div class="slider" id="slider">
           <div class="slide">
-            <img src="/assets/slide3.png" alt="코르테즈">
+            <img src="../../assets/slide3.png" alt="코르테즈">
           </div>
           <div class="slide">
-            <img src="/assets/slide1.png" alt="코르테즈">
+            <img src="../../assets/slide1.png" alt="코르테즈">
           </div>
           <div class="slide">
-            <img src="/assets/slide2.png" alt="코르테즈">
+            <img src="../../assets/slide2.png" alt="코르테즈">
           </div>
           <div class="slide">
-            <img src="/assets/slide3.png" alt="코르테즈">
+            <img src="../../assets/slide3.png" alt="코르테즈">
           </div>
         </div>
         <button class="slider-button prev" onclick="slide(-1)">
-          <img src="/assets/leftDark.svg" />
+          <img src="../../assets/leftDark.svg" />
         </button>
         <button class="slider-button next" onclick="slide(1)">
-          <img src="/assets/rightDark.svg" />
+          <img src="../../assets/rightDark.svg" />
         </button>
       </div>
     </section>
@@ -174,7 +174,7 @@
       <div class="sport-card-container">
         <div class="divider"></div>
         <div class="sport-card">
-          <img src="/assets/sport1.png" alt="나이키 트레이닝">
+          <img src="../../assets/sport1.png" alt="나이키 트레이닝">
           <div class="sport-card-content">
             <h2 class="sport-card-title">나이키 트레이닝</h2>
             <p class="sport-card-subtitle">한계에 도전하는 여성과 함께할 아이템</p>
@@ -182,7 +182,7 @@
           </div>
         </div>
         <div class="sport-card">
-          <img src="/assets/sport2.png" alt="나이키 축구">
+          <img src="../../assets/sport2.png" alt="나이키 축구">
           <div class="sport-card-content">
             <h2 class="sport-card-title">나이키 트레일 러닝</h2>
             <p class="sport-card-subtitle">새로운 모험으로 이끌어 주는 아이템</p>
@@ -190,7 +190,7 @@
           </div>
         </div>
         <div class="sport-card">
-          <img src="/assets/sport3.png" alt="나이키 농구">
+          <img src="../../assets/sport3.png" alt="나이키 농구">
           <div class="sport-card-content">
             <h2 class="sport-card-title">나이키 축구</h2>
             <p class="sport-card-subtitle">경기 중 독보적인 존재감을 드러낼 아이템</p>
@@ -212,7 +212,7 @@
       </div>
       <div class="membership-card-container">
         <div class="membership-card">
-          <img src="/assets/membership1.png" alt="멤버십 혜택 1">
+          <img src="../../assets/membership1.png" alt="멤버십 혜택 1">
           <div class="membership-card-content">
             <p class="membership-card-subtitle">스포츠 & 웰니스 앱</p>
             <h2 class="membership-card-title">언제 어디서든 운동하기</h2>
@@ -220,7 +220,7 @@
           </div>
         </div>
         <div class="membership-card">
-          <img src="/assets/membership2.png" alt="멤버십 혜택 2">
+          <img src="../../assets/membership2.png" alt="멤버십 혜택 2">
           <div class="membership-card-content">
             <p class="membership-card-subtitle">멤버 전용 제품</p>
             <h2 class="membership-card-title">멤버만을 위한 제품 혜택</h2>
@@ -228,7 +228,7 @@
           </div>
         </div>
         <div class="membership-card">
-          <img src="/assets/membership3.png" alt="멤버십 혜택 3">
+          <img src="../../assets/membership3.png" alt="멤버십 혜택 3">
           <div class="membership-card-content">
             <p class="membership-card-subtitle">멤버 리워드</p>
             <h2 class="membership-card-title">운동과 쇼핑을 위한 특별한 혜택</h2>
