--- a/src/pages/signUp/index.html
+++ b/src/pages/signUp/index.html
@@ -13,7 +13,7 @@
   <!-- 컨텐츠 시작 -->
   <div class="container">
     <!-- 로고 -->
-    <img src="/assets/logo.svg" alt="Nike Logo" class="nike-logo">
+    <img src="../../assets/logo.svg" alt="Nike Logo" class="nike-logo">
 
     <!-- 회원가입 폼 -->
     <form>
@@ -36,8 +36,8 @@
             <input type="password" id="password" placeholder="비밀번호" required>
           </div>
           <div class="input-validate">
-            <p><img src="/assets/IconCheck.svg" /> 최소 8자</p>
-            <p><img src="/assets/IconCheck.svg" /> 알파벳 대문자 및 소문자 조합, 최소 1개 이상의 숫자</p>
+            <p><img src="../../assets/IconCheck.svg" /> 최소 8자</p>
+            <p><img src="../../assets/IconCheck.svg" /> 알파벳 대문자 및 소문자 조합, 최소 1개 이상의 숫자</p>
           </div>
         </div>
 
