--- a/src/pages/termsOfService/index.html
+++ b/src/pages/termsOfService/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <img src="/assets/logo.svg" alt="Nike Logo" class="logo">
+    <img src="../../assets/logo.svg" alt="Nike Logo" class="logo">
     <h1>계속 진행하시려면 아래 권한에 동의해 주세요.</h1>
     <p>* 필수 항목</p>
     <p class="sub-text">개인 정보의 제3자 제공 및 국외 이전에 대한 내용을 확인하고 동의합니다.</p>
