--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -9,11 +9,10 @@
   <link rel="stylesheet" href="./index.css">
   <script src="../../components/header/index.js" type="module"></script>
   <script src="../../components/footer/index.js" type="module"></script>
-  <script src="./main.js" type="module"></script>
 </head>
 
 <body>
-  <!-- 네비게이션 바 컴포넌트 -->
+  <!-- 네비게이션 바 -->
   <nav-bar menu-items='["New & Featured", "Men", "Women", "Kids", "Sale"]'></nav-bar>
 
   <!-- 컨텐츠 시작 -->
@@ -154,10 +153,10 @@
           </div>
         </div>
         <button class="slider-button prev" onclick="slide(-1)">
-          <img src="../../assets/leftDark.svg" />
+          <img src="/icons/leftDark.svg" />
         </button>
         <button class="slider-button next" onclick="slide(1)">
-          <img src="../../assets/rightDark.svg" />
+          <img src="/icons/rightDark.svg" />
         </button>
       </div>
     </section>
