--- a/src/pages/myCart/index.html
+++ b/src/pages/myCart/index.html
@@ -12,15 +12,15 @@
 </head>
 
 <body>
-  <!-- 네비게이션바 -->
-  <nav-bar menu-items='["New & Featured", "Men", "Women", "Kids", "Sale"]'></nav-bar>
+  <!-- 네비게이션 바 -->
+  <nav-bar></nav-bar>
 
   <!-- 하단 주문하기 버튼(모바일) -->
   <button class="shopping-cart-button">주문하기</button>
 
   <!-- 검색바(모바일) -->
   <div class="search-bar">
-    <img src="../../assets/search.svg" />
+    <img src="/icons/search.svg" />
     <input type="text" placeholder="검색" />
   </div>
 
@@ -46,8 +46,8 @@
               <div class="product-option">포른 티스트/그린듀와연/새벽/크롬</div>
               <div class="product-quantity">사이즈: 275 • 수량 — 1 +</div>
               <div class="product-actions">
-                <span><img src="../../assets/heart.svg" /></span>
-                <span><img src="../../assets/trash.svg" /></span>
+                <span><img src="/icons/heart.svg" /></span>
+                <span><img src="/icons/trash.svg" /></span>
               </div>
             </div>
           </div>
@@ -65,7 +65,7 @@
           <div class="order-row">
             <div style="display: flex; gap: 7.6px;">
               <span>상품 금액</span>
-              <img src="../../assets/question.svg" />
+              <img src="/icons/question.svg" />
             </div>
             <span>189,000 원</span>
           </div>
@@ -113,10 +113,10 @@
         <h2 class="rec-title">추천 제품</h2>
         <div class="rec-slide-buttons">
           <button class="rec-slide-button">
-            <img src="../../assets/left.svg" />
+            <img src="/icons/left.svg" />
           </button>
           <button class="rec-slide-button">
-            <img src="../../assets/right.svg" />
+            <img src="/icons/right.svg" />
           </button>
         </div>
       </div>
