--- a/src/pages/wishList/index.html
+++ b/src/pages/wishList/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <!-- 네비게이션바 -->
-  <nav-bar menu-items='["New & Featured", "Men", "Women", "Kids", "Sale"]'></nav-bar>
+  <!-- 네비게이션 바 -->
+  <nav-bar></nav-bar>
 
   <!-- 컨텐츠 시작 -->
   <div class="container">
