--- a/src/pages/signIn/index.html
+++ b/src/pages/signIn/index.html
@@ -13,7 +13,7 @@
   <!-- 컨텐츠 시작 -->
   <div class="container">
     <!-- 로고 -->
-    <img src="../../assets/logo.svg" alt="Nike Logo" class="nike-logo">
+    <img src="/icons/logo.svg" alt="Nike Logo" class="nike-logo">
 
     <!-- step 1 -->
     <div class="step active" id="step1">
@@ -31,7 +31,7 @@
       <p class="user-email"></p>
       <div class="input-group">
         <input type="password" id="password" placeholder="비밀번호" required>
-        <img src="../../assets/eyeSlash.svg" style="width: 20px; height: 20px; padding: 16px;" alt="비밀번호 입력" />
+        <img src="/icons/eyeSlash.svg" style="width: 20px; height: 20px; padding: 16px;" alt="비밀번호 입력" />
       </div>
       <p class="help-text"><a>비밀번호 찾기</a></p>
       <div class="btn-container">
@@ -43,31 +43,6 @@
   </div>
   <!-- 컨텐츠 끝 -->
 
-  <script>
-    const email = document.getElementById('email');
-    const password = document.getElementById('password');
-    const continueBtn = document.getElementById('continueBtn');
-    const loginBtn = document.getElementById('loginBtn');
-    const backBtn = document.getElementById('backBtn');
-    const step1 = document.getElementById('step1');
-    const step2 = document.getElementById('step2');
-    const userEmail = document.querySelector('.user-email');
-
-    continueBtn.addEventListener('click', () => {
-      if (email.value != "") {
-        step1.classList.remove('active');
-        step2.classList.add('active');
-        userEmail.textContent = email.value;
-      } else {
-        confirm("이메일을 입력해주세요.")
-      }
-    });
-
-    backBtn.addEventListener('click', () => {
-      step2.classList.remove('active');
-      step1.classList.add('active');
-    });       
-  </script>
 </body>
 
 </html>
